--- a/css/styles.css
+++ b/css/styles.css
@@ -56,10 +56,6 @@ menu > .link {
   align-items: center;
 }
 
-p {
-  margin-top: 8px;
-}
-
 img {
   display: block;
 }
@@ -111,7 +107,27 @@ img {
   gap: 24px;
 }
 
+.team-card {
+  background-color: #ffffff;
+  border-radius: 0 0 4px 4px;
+}
+
+.team-card-text {
+  padding: 32px 16px;
+}
+
+.team-card .section-subheader {
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.team-card .article {
+  text-align: center;
+}
+
 .portfolio {
+  padding: 120px 0;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -121,7 +137,16 @@ img {
   flex-wrap: wrap;
   justify-content: center;
   gap: 48px 24px;
-  padding-top: 72px;
+}
+
+.portfolio-card-text {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+.portfolio .article {
+  margin-bottom: 8px;
 }
 
 .footer {
@@ -130,6 +155,12 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 100px 0;
+}
+
+footer .article {
+  color: #f4f4fd;
+  max-width: 264px;
 }
 
 .logo {
@@ -232,26 +263,4 @@ address .link {
   text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
-}
-
-footer .article {
-  color: #f4f4fd;
-}
-
-.team-card {
-  background-color: #ffffff;
-  border-radius: 0 0 4px 4px;
-}
-
-.team-card-text {
-  padding: 32px 16px;
-}
-
-.team-card .section-subheader {
-  text-align: center;
-  margin-bottom: 8px;
-}
-
-.team-card .article {
-  text-align: center;
 }
