--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ header {
 .nav-list {
   display: flex;
   gap: 40px;
+  padding: 24px 0;
 }
 
 menu > .link {
@@ -92,6 +93,10 @@ img {
   gap: 24px;
 }
 
+.benefits-card {
+  width: calc(100% - 72px);
+}
+
 .our-team {
   background: #f4f4fd;
 
@@ -110,6 +115,7 @@ img {
 .team-card {
   background-color: #ffffff;
   border-radius: 0 0 4px 4px;
+  width: calc((100% - 72px) / 4);
 }
 
 .team-card-text {
@@ -132,6 +138,11 @@ img {
   flex-direction: column;
   align-items: center;
 }
+
+.portfolio-card {
+  width: calc((100% - 48px) / 3);
+}
+
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
@@ -161,6 +172,11 @@ img {
 footer .article {
   color: #f4f4fd;
   max-width: 264px;
+}
+
+footer .logo {
+  margin-bottom: 16px;
+  display: inline-block;
 }
 
 .logo {
