--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@ ul {
 
 header {
   border-bottom: 1px solid #e7e9fc;
+  padding: 24px 0;
 }
 
 .nav {
@@ -94,7 +95,7 @@ img {
 }
 
 .benefits-card {
-  width: calc(100% - 72px);
+  width: calc(100% - 72px) / 4;
 }
 
 .our-team {
@@ -112,10 +113,14 @@ img {
   gap: 24px;
 }
 
+.team-container {
+  padding: 32px 16px;
+}
+
 .team-card {
   background-color: #ffffff;
   border-radius: 0 0 4px 4px;
-  width: calc((100% - 72px) / 4);
+  width: calc(100% - 72px) / 4;
 }
 
 .team-card-text {
@@ -140,7 +145,7 @@ img {
 }
 
 .portfolio-card {
-  width: calc((100% - 48px) / 3);
+  width: calc(100% - 48px) / 3;
 }
 
 .portfolio-list {
@@ -279,4 +284,8 @@ address .link {
   text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
+}
+
+.visually-hidden {
+  overflow: hidden;
 }
