--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ ul {
 
 .header-container {
   display: flex;
+  padding: 24px 0;
 }
 
 .container {
@@ -30,7 +31,6 @@ ul {
 
 header {
   border-bottom: 1px solid #e7e9fc;
-  padding: 24px 0;
 }
 
 .nav {
@@ -87,6 +87,8 @@ img {
 
 .benefits {
   padding: 120px 0;
+  overflow: hidden;
+  display: none;
 }
 
 .benefits-list {
@@ -284,8 +286,4 @@ address .link {
   text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
-}
-
-.visually-hidden {
-  overflow: hidden;
 }
