--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,9 @@ header {
   border-bottom: 1px solid #e7e9fc;
   padding: 24px 0;
 }
+.header > .link {
+  padding: 24px 0;
+}
 
 .nav {
   display: flex;
