--- a/css/styles.css
+++ b/css/styles.css
@@ -29,11 +29,8 @@ ul {
   padding: 0 15px;
 }
 
-header {
+.header {
   border-bottom: 1px solid #e7e9fc;
-  padding: 24px 0;
-}
-.header > .link {
   padding: 24px 0;
 }
 
@@ -291,5 +288,14 @@ address .link {
 }
 
 .hide {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
   overflow: hidden;
 }
