--- a/css/styles.css
+++ b/css/styles.css
@@ -95,10 +95,6 @@ img {
   gap: 24px;
 }
 
-.benefits-card {
-  width: calc(100% - 72px) / 4;
-}
-
 .our-team {
   background: #f4f4fd;
 
@@ -121,7 +117,6 @@ img {
 .team-card {
   background-color: #ffffff;
   border-radius: 0 0 4px 4px;
-  width: calc(100% - 72px) / 4;
 }
 
 .team-card-text {
@@ -271,7 +266,9 @@ address .link {
 }
 
 .article {
-  line-height: 1.5rem;
+  margin: 0;
+  font-size: 16px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
