--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,9 @@ img {
   display: flex;
   gap: 24px;
 }
+.benefits .card {
+  width: calc((100% - 72px) / 4);
+}
 
 .our-team {
   background: #f4f4fd;
@@ -120,7 +123,7 @@ img {
 }
 
 .team-card-text {
-  padding: 32px 16px;
+  padding: 32px 16px 32px;
 }
 
 .team-card .section-subheader {
