--- a/css/styles.css
+++ b/css/styles.css
@@ -94,9 +94,6 @@ img {
   display: flex;
   gap: 24px;
 }
-.benefits .card {
-  width: calc((100% - 72px) / 4);
-}
 
 .our-team {
   background: #f4f4fd;
@@ -114,12 +111,13 @@ img {
 }
 
 .team-container {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 
 .team-card {
   background-color: #ffffff;
   border-radius: 0 0 4px 4px;
+  width: calc((100% - 72px) / 4);
 }
 
 .team-card-text {
