--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ img {
 }
 
 .team-container {
-  padding: 32px 0;
+  padding: 32px 16px;
 }
 
 .team-card {
@@ -121,7 +121,7 @@ img {
 }
 
 .team-card-text {
-  padding: 32px 16px 32px;
+  padding: 32px 0;
 }
 
 .team-card .section-subheader {
